fix: navbar overlap fixed nav on hero

--- a/src/components/pages/Home/styles.module.css
+++ b/src/components/pages/Home/styles.module.css
@@ -8,7 +8,7 @@
   position: fixed;
   top: 0;
   z-index: 1;
-  transform: translateY(-80px);
+  transform: translateY(-100px);
   transition: all 0.3s ease-in-out;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   z-index: 100;
